--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,18 +36,22 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  web_socket_channel: any
+  flutter_bloc: ^8.0.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  logging: ^1.2.0
+  logging_appenders: ^1.2.0+1
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  web_socket_channel: 2.4.5
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
