--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
-  web_socket_channel: any
+  web_socket_channel: ^2.4.4
   flutter_bloc: ^8.0.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
