--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  shared_preferences: ^2.0.9
   web_socket_channel: ^2.4.4
   flutter_bloc: ^8.0.0
   freezed_annotation: ^2.4.1
