--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   logging: ^1.2.0
   logging_appenders: ^1.2.0+1
   intl: ^0.19.0
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
